k8s/metallb-ip-pool.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
