k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-backend
  namespace: arsam-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-backend
  template:
    metadata:
      labels:
        app: spring-backend
    spec:
      containers:
        - name: spring-backend
          image: arsam/spring-boot-server:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: spring-backend
  namespace: arsam-app
spec:
  selector:
    app: spring-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
