k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-frontend
  namespace: arsam-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-frontend
  template:
    metadata:
      labels:
        app: angular-frontend
    spec:
      containers:
        - name: angular-frontend
          image: frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend
  namespace: arsam-app
spec:
  selector:
    app: angular-frontend
  ports:
    - port: 80
      targetPort: 80
