k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arsam-ingress
  namespace: arsam-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: arsam.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spring-backend
                port:
                  number: 8080
